# epm

./: .gitignore  .gitmodules  ANNOUNCEMENT  CHANGES  Makefile.am  Makefile.in  README  aclocal.m4  aix.c  bootstrap.sh  bsd.c  config.h.in  configure  configure.in  deb.c  default.xpm  dist.c  epm.c  epm.h  epm.list.in  epm.mk  epm.test.list  epminstall.c  epmstring.h  file.c  getpo.sh  gui-common.cxx  gui-common.h  inst.c  mkepmlist.c  osx.c  pkg.c  portable.c  qprintf.c  remove.sh.in  rpm.c  run.c  setld.c  setup.cxx  setup.fl  (+15 more)
debian/: README.Debian  changelog  control  copyright  doc-base  docs  rules
desktop/: drweb-drweb.directory.in  uninst.desktop.in
doc/: Makefile.in  epm.list.man  epm.man  epminstall.man  mantohtml.c  mkepmlist.man  setup.man  setup.types.man
m4/: po.m4
po/: Makefile  Makefile.in  Makevars  POTFILES  POTFILES.in  epm.pot  fr.po  gettext.sh  ru.po
